Prevent jump when border added to filter-term input

--- a/projects/sandbox/src/app/dataset-content-summary/dataset-content-summary.component.scss
+++ b/projects/sandbox/src/app/dataset-content-summary/dataset-content-summary.component.scss
@@ -79,7 +79,7 @@ canvas {
     max-width: 12em;
     min-width: 10em;
     &:not(:focus):not(:focus-visible) {
-      border: 0;
+      border-color: transparent;
     }
     &.pseudo-active:not(:focus) {
       color: $eu-light-orange;
